# cvgui

./: CMakeLists.txt  README.md  cvgui.cpp  cvgui.h  cvgui.kdev4  fonty.cpp  fonty.h  main.cpp
.kdev4/: cvgui.kdev4
